--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-credential.component.html
@@ -44,18 +44,17 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Update Credentials</h3>
-                <p>Credentials also appear on answers you write.</p>
+                <h3><!--Update Credentials-->Actualizar credencial</h3>
             </div>
             <div class="profile-modal-body">
-                <i class="fa fa-user"></i><span>Edit</span>
+                <i class="fa fa-user"></i><span><!--Edit-->Editar</span>
                 <div>
                     <input type="text" [(ngModel)]="credential.title" />
                 </div>
                 <div class="profile-modal-button-container">
-                    <a (click)="DeleteCredentialTitle()">Delete</a>
-                    <a (click)="onClickedExit()">Cancel</a>
-                    <button class="btn btn-sm btn-primary" (click)="saveCredentialTitle()">Save</button>
+                    <a (click)="DeleteCredentialTitle()"><!--Delete-->Eliminar</a>
+                    <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
+                    <button class="btn btn-sm btn-primary" (click)="saveCredentialTitle()"><!--Save-->Guardar</button>
                 </div>
             </div>
         </div>
