--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/twitter.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/twitter.component.html
@@ -48,14 +48,14 @@
               
             </div>
             <div class="profile-modal-body">
-                <i class="fa fa-user"></i><span>Edit</span>
+                <i class="fa fa-user"></i><span>Editar</span>
                 <div>
                     <input type="text" [(ngModel)]="title" />
                 </div>
                 <div class="profile-modal-button-container">
-                    <a (click)="DeleteTitle()">Delete</a>
-                    <a (click)="onClickedExit()">Cancel</a>
-                    <button class="btn btn-sm btn-primary" (click)="saveTitle()">Save</button>
+                    <a (click)="DeleteTitle()"><!--Delete-->Eliminar</a>
+                    <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
+                    <button class="btn btn-sm btn-primary" (click)="saveTitle()"><!--Save-->Guardar</button>
                 </div>
             </div>
         </div>
