--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-stat/profile-stat.component.html
@@ -18,10 +18,10 @@
 </style>
 <div class="statistic-panel">
     <ul class="profile-rightmenu">
-        <li>{{profileParam?.profileViewCount}} Profile views </li>
-        <li>{{profileParam?.questions}} Answers views </li>
-        <li>{{profileParam?.answerLikeCount}} Answers Likes </li>
-        <li>{{profileParam?.answerMadeThisMonth}} Answer made this month </li>
-        <li>{{profileParam?.questionMadeThisMonth}} Questions made this month </li>
+        <li>{{profileParam?.profileViewCount}} <!--Profile views-->Vistas de perfil </li>
+        <li>{{profileParam?.questions}} <!--Answers views-->Respuestas vistas </li>
+        <li>{{profileParam?.answerLikeCount}} <!--Answers Likes-->Me gusta </li>
+        <li>{{profileParam?.answerMadeThisMonth}} <!--Answer made this month-->Respuestas este mes </li>
+        <li>{{profileParam?.questionMadeThisMonth}} <!--Questions made this month-->Preguntas este mes </li>
     </ul>
 </div>
