--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -117,10 +117,10 @@
     <div class="filter-panel">
         <div class="read-question-button">
             <a (click)="getQuestionsAnswered(categorySelected.id)">
-                {{totalCount?.totalAnsweredQuestion}} Leer preguntas <!--Read-->
+                {{totalCount?.totalAnsweredQuestion}} Preguntas <!--Read-->
             </a>
             <a (click)="getQuestionNotAnswered(categorySelected.id)">
-                {{totalCount?.totalUnAnsweredQuestion}} Responder <!--Answer-->
+                {{totalCount?.totalUnAnsweredQuestion}} Sin responder <!--Answer-->
             </a>
         </div>
         <div class="read-question-button">
