--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -50,9 +50,9 @@
                     <li style="list-style-type: none;">
                         <a (click)="questionReportClicked(questionObj?.id,answerObj?.id)">Reportar<!--Report--></a>
                     </li>
-                    <li style="list-style-type: none;">
-                        <a (click)="postClikced(questionObj?.id)">Guardar<!--Post--></a>
-                    </li>
+                    <!--<li style="list-style-type: none;">
+                        <a (click)="postClikced(questionObj?.id)">Guardar///Post</a>
+                    </li>-->
                 </ul>
             </popover-content>
         </div>
