--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPassword.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "¿Olvidaste tu contraseña?";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -16,11 +16,11 @@
 </style>
 <div class="col-md-4 col-md-offset-4">
     <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
-        <h4>Enter your email.</h4>
+        <h4>Ingresa tu correo electrónico.</h4>
         <hr />
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <label  class="col-md-2 control-label">Correo electrónico @*Emali*@</label>
             <div class="col-md-8">
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
@@ -28,11 +28,10 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">@*Submit*@Enviar</button>
             </div>
         </div>
     </form>
-
 </div>
 
 @section Scripts {
