--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -55,11 +55,11 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="email"><!--Position-->Cargo* :</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="position" placeholder="Enter Position" [(ngModel)]="employment.position" required name="position"
+                            <input type="text" class="form-control" id="position" placeholder="¿Qué haces?" [(ngModel)]="employment.position" required name="position"
                                    #position="ngModel">
                             <div [hidden]="position.valid || position.pristine"
                                  class="alert alert-danger">
-                                Position is required
+                                Es requerido
                             </div>
                          </div>
                     </div>
