--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -48,7 +48,6 @@
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
                 <h3><!--Others Information-->Otra información</h3>
-               
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="saveOtherExperience()" #otherExperienceForm="ngForm">
@@ -66,16 +65,16 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="email">Description*:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="Description" placeholder="Enter Description" [(ngModel)]="otherExperience.description" required name="Description"
+                            <input type="text" class="form-control" id="Description" placeholder="¿Cuál es tu hobby?" [(ngModel)]="otherExperience.description" required name="Description"
                                    #Description="ngModel">
                             <div [hidden]="Description.valid || Description.pristine"
                                  class="alert alert-danger">
-                                Description is required
+                                <!--Description is required-->Es requerido
                             </div>
                         </div>
                     </div>
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteOtherExperience()"><!--Delete-->Borrar</a>
+                        <a (click)="DeleteOtherExperience()"><!--Delete-->Eliminar</a>
                         <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
                         <button type="submit" class="btn btn-success" [disabled]="!otherExperienceForm.form.valid"><!--Save-->Guardar</button>
                     </div>
