--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
@@ -47,27 +47,23 @@
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container" style="border:1px solid;">
             <div class="modal-header">
-                <h3>Ciudad</h3>
-
+                <h3>Información de lugar</h3>
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="savePlace()" #placeForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email"><!--Location Name-->Información de lugar*:</label>
+                        <label class="control-label col-sm-4" for="email"><!--Location Name-->Ciudad*:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="LocationName" placeholder="Enter LocationName" [(ngModel)]="place.locationName" required name="LocationName"
+                            <input type="text" class="form-control" id="LocationName" placeholder="¿Dónde vives?" [(ngModel)]="place.locationName" required name="LocationName"
                                    #LocationName="ngModel">
                             <div [hidden]="LocationName.valid || LocationName.pristine"
                                  class="alert alert-danger">
-                                Location Name is required
+                                <!--Location Name is required-->Es requerido
                             </div>
                         </div>
                     </div>
-
-                  
-
                     <div class="profile-modal-button-container">
-                        <a (click)="DeletePlace()"><!--Delete-->Borrar</a>
+                        <a (click)="DeletePlace()"><!--Delete-->Eliminar</a>
                         <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
                         <button type="submit" class="btn btn-success" [disabled]="!placeForm.form.valid"><!--Save-->Guardar</button>
                     </div>
