--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/comment/comment.component.html
@@ -5,7 +5,7 @@
             <div class="comment-input">
                 <img class="user-image" src="{{_logObj.user.imageUrl?_logObj.user.imageUrl:'../../profile/avatar.png'}}" />
                 <input class="form-control" id="comment" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" />
-                <button type="button" class="btn btn-primary" (click)="submitComment(questionId,answerId)">Comment</button>
+                <button type="button" class="btn btn-primary" (click)="submitComment(questionId,answerId)">Comenta</button>
             </div>
         </form>
         <div class="card card-block">
