--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -61,27 +61,27 @@
         <div class="topAlign">
             <ul class="fa-ul">
                 <li *ngIf="userInfoDetails?.answerCount!=0">
-                    <i class="fa-li fa fa-check-square"></i>Answers: {{userInfoDetails?.answerCount}}
+                    <i class="fa-li fa fa-check-square"></i><!--Answers-->Respuestas: {{userInfoDetails?.answerCount}}
                 </li>
-                <li *ngIf="userInfoDetails?.questionCount!=0"><i class="fa-li fa fa-question"></i>Questions: {{userInfoDetails?.questionCount}}</li>
+                <li *ngIf="userInfoDetails?.questionCount!=0"><i class="fa-li fa fa-question"></i><!--Questions-->Preguntas: {{userInfoDetails?.questionCount}}</li>
 
                 <li *ngIf="userInfoDetails?.education">
-                    <i class="fa-li fa fa-university"></i>Education: {{userInfoDetails?.education}}
+                    <i class="fa-li fa fa-university"></i><!--Education-->Educación: {{userInfoDetails?.education}}
                 </li>
                 <li *ngIf="userInfoDetails?.employment">
-                    <i class="fa-li fa fa-info-circle"></i>Employment: {{userInfoDetails?.employment}}
+                    <i class="fa-li fa fa-info-circle"></i><!--Employment-->Labor: {{userInfoDetails?.employment}}
                 </li>
                 <li *ngIf="userInfoDetails?.place">
-                    <i class="fa-li fa fa-home "></i>Place: {{userInfoDetails?.place}}
+                    <i class="fa-li fa fa-home "></i><!--Place-->Lugar: {{userInfoDetails?.place}}
                 </li>
                 <li *ngIf="userInfoDetails?.otherExperience">
-                    <i class="fa-li fa fa-cog"></i>Others: {{userInfoDetails?.otherExperience}}
+                    <i class="fa-li fa fa-cog"></i><!--Others-->Otros: {{userInfoDetails?.otherExperience}}
                 </li>
 
                 <li *ngIf="userInfoDetails?.questionViewCount!=0">
                     <i class="fa-li fa fa-eye">
 
-                    </i>Views: {{userInfoDetails?.questionViewCount}}
+                    </i><!--Views-->Vistas: {{userInfoDetails?.questionViewCount}}
                 </li>
             </ul>
         </div>
