--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
@@ -92,7 +92,7 @@
                 </h2>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Email" placeholder="Correo electrónico" class="form-control" id="email"/>
+                        <input asp-for="Email" placeholder="Ingresa tu correo electrónico" class="form-control" id="email"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <p class="col-sm-offset-1">
-                    <a asp-action="ForgotPassword" class="forget-password">@*Forgot password?*@¿Olvidaste la contraseña?</a>
+                    <a asp-action="ForgotPassword" class="forget-password">@*Forgot password?*@¿Olvidaste tu contraseña?</a>
                 </p>
             </form>
         </section>
