Some missing spanish text added, forgot password style fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteEducation()"><!--Delete-->Borrar</a>
+                        <a (click)="DeleteEducation()"><!--Delete-->Eliminar</a>
                         <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
                         <button type="submit" class="btn btn-success" [disabled]="!educationForm.form.valid"><!--Save-->Guardar</button>
                     </div>
