--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="profile-modal-button-container">
-                        <a (click)="DeleteEmployment()"><!--Delete-->Borrar</a>
+                        <a (click)="DeleteEmployment()"><!--Delete-->Eliminar</a>
                         <a (click)="onClickedExit()"><!--Cancel--> Cancelar</a>
                         <button type="submit" class="btn btn-success" [disabled]="!employmentForm.form.valid"><!--Save-->Guardar</button>
                     </div>
