--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/facebook.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/facebook.component.html
@@ -53,7 +53,7 @@
                     <input type="text" [(ngModel)]="title" />
                 </div>
                 <div class="profile-modal-button-container">
-                    <a (click)="DeleteTitle()"><!--Delete-->Borrar</a>
+                    <a (click)="DeleteTitle()"><!--Delete-->Eliminar</a>
                     <a (click)="onClickedExit()"><!--Cancel-->Cancelar</a>
                     <button class="btn btn-sm btn-primary" (click)="saveTitle()"><!--Save-->Guardar</button>
                 </div>
